kustomize/environments/overlays/gloo-edge/virtualservice/tcp/mssql-sqlserver/tcp-gateway-mssql.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: tcp
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8000
  tcpGateway:
    tcpHosts:
    - name: one
      destination:
        single:
          upstream:
            name: mssql-sqlserver-deployment-1433
            namespace: gloo-system
  useProxyProto: false
